objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>B2B_Source_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship referencing the Source CC Order from B2B</description>
        <label>B2B Source Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B2B_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup value referencing the associated CC Cart record.</description>
        <label>B2B Source</label>
        <referenceTo>ccrz__E_Cart__c</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>Cart</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Additional_Details__c</fullName>
        <description>Optional details text field that can be filled at the time of requesting a quote.</description>
        <label>B2B Requested Quote Additional Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sync_Quote_To_B2B__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used to determine if the quote record will be synced to B2B. Set to true for a record to sync to B2B.</description>
        <label>Update Customer Pricing</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>